# nekolib

./: .gitignore  .gitmodules  CMakeLists.txt  format.sh  readme.md
include/neko/: chrono.hpp  color.hpp  containor.hpp  event.hpp  filesystem.hpp  functional.hpp  platform.hpp  string.hpp  thread.hpp
src/: color.cpp  filesystem.cpp  string.cpp
